fix: Modifying the text in the client modal menu

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -374,7 +374,7 @@
                                     <span>
                                         <i class="fa fa-solid fa-cogs"></i>
                                     </span>
-                                    {{ 'geral.configuracoes' | translate }}
+                                    {{ 'geral.jogoResponsavel' | translate }}
                                     <span class="arrow-nav">
                                         <i class="fa-solid fa-angle-right"></i>
                                     </span>
@@ -462,7 +462,7 @@
                                     <span>
                                         <i class="fa fa-cogs"></i>
                                     </span>
-                                    {{ 'geral.configuracoes' | translate }}
+                                    {{ 'geral.jogoResponsavel' | translate }}
                                     <span class="arrow-nav">
                                         <i class="fa-solid fa-angle-right"></i>
                                     </span>
@@ -545,7 +545,7 @@
                                     <span>
                                         <i class="fa fa-solid fa-cogs"></i>
                                     </span>
-                                    {{ 'geral.configuracoes' | translate }}
+                                    {{ 'geral.jogoResponsavel' | translate }}
                                     <span class="arrow-nav">
                                         <i class="fa-solid fa-angle-right"></i>
                                     </span>
@@ -660,7 +660,7 @@
                                 <a class="dropdown-btn-filled" [routerLink]="['/clientes/configuracoes']"
                                     routerLinkActive="router-link-active" *ngIf="isCliente">
                                     <i class="fa fa-solid fa-cogs mb-2"></i>
-                                    {{ 'geral.configuracoes' | translate }}
+                                    {{ 'geral.jogoResponsavel' | translate }}
                                 </a>
                                 <a class="dropdown-btn-filled" [routerLink]="['/alterar-senha']"
                                     routerLinkActive="router-link-active" *ngIf="!isCliente">
@@ -704,7 +704,7 @@
                                                             </a>-->
                                 <a class="dropdown-btn-filled" (click)="listPrinters()" *ngIf="appMobile">
                                     <i class="fa fa-solid fa-cogs"></i>
-                                    {{ 'geral.configuracoes' | translate }}
+                                    {{ 'geral.jogoResponsavel' | translate }}
                                 </a>
                             </div>
                             <a (click)="logout()" href="#" class="dropdown-btn btn-sair">
