--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,7 +69,7 @@
     </a>
 </div>
 
-<div class="accept-cookies" *ngIf="!acceptedCookies && !showCookieMessage">
+<div class="accept-cookies" *ngIf="!acceptedCookies">
     <div class="cookie-message">
         <div class="titulo-informativo-cookies">
             {{'geral.tituloInformativoCookies' | translate}} <i class="fa-solid fa-cookie"></i>
