fix: remove function call from html to ts. preventing loops.

--- a/src/app/clientes/apostas-cliente/apostas-cliente.component.html
+++ b/src/app/clientes/apostas-cliente/apostas-cliente.component.html
@@ -11,7 +11,7 @@
             </div>
 
             <div class="tabs">
-                <ng-container *ngFor="let tab of getTabs()">
+                <ng-container *ngFor="let tab of tabs">
                     <a
                         [ngClass]="{'active': tab.habilitado && tabSelected === tab.id}"
                         (click)="changeTab(tab.id)"
