Fix: The cashback button is not displayed and the indique ganhe is not hidden on the desktop when deactivated in the center

--- a/src/app/clientes/cashback/cashback.component.css
+++ b/src/app/clientes/cashback/cashback.component.css
@@ -149,6 +149,10 @@
     .only-desktop {
         display: none;
     }
+
+    .mobile-modal-header{
+        padding: 12px 0;
+    }
 }
 
 @media only screen and (max-width: 1024px) {
