--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -541,6 +541,15 @@
                                         <i class="fa-solid fa-angle-right"></i>
                                     </span>
                                 </a>
+                                <a (click)="openCashback()" *ngIf="isCliente && cashbackEnabled">
+                                    <span>
+                                        <i class="fa fa-solid fa-gift"></i>
+                                    </span>
+                                        {{'cashback.cashback' | translate}}
+                                    <span class="arrow-nav">
+                                        <i class="fa-solid fa-angle-right"></i>
+                                    </span>
+                                </a>
                                 <a (click)="listPrinters()" *ngIf="appMobile">
                                     <span>
                                         <i class="fa fa-solid fa-cogs"></i>
@@ -656,6 +665,12 @@
                                     <i class="fa fa-solid fa-gift mb-2"></i>
                                     <span style="text-align: center; white-space: break-spaces; line-height: 14px;"> {{
                                         'indique_ganhe.indiqueGanhe' | translate }}</span>
+                                </a>
+                                <a class="dropdown-btn-filled" [routerLink]="['/clientes/cashback']"
+                                    routerLinkActive="router-link-active" *ngIf="isCliente && cashbackEnabled">
+                                    <i class="fa fa-solid fa-gift mb-2"></i>
+                                    <span style="text-align: center; white-space: break-spaces; line-height: 14px;"> {{
+                                        'cashback.cashback' | translate }}</span>
                                 </a>
                                 <a class="dropdown-btn-filled" [routerLink]="['/clientes/configuracoes']"
                                     routerLinkActive="router-link-active" *ngIf="isCliente">
