Adjusted code review

--- a/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
+++ b/src/app/shared/layout/modals/cadastro-modal/cadastro-modal.component.html
@@ -49,8 +49,7 @@
                         <div class="input-md">
                             <input type="text" id="dataNascimento" class="form-control inverted-out" mask="d0/M0/0000"
                                 formControlName="nascimento"
-                                [ngClass]="applyCssInputError('nascimento')" placeholder=" "
-                                [readonly]="faceMatchRequested">
+                                [ngClass]="applyCssInputError('nascimento')" placeholder=" ">
                             <label for="dataNascimento">{{'geral.dataDeNascimento' | translate}}</label>
                         </div>
 
