--- a/src/app/casino/wall/wall.component.css
+++ b/src/app/casino/wall/wall.component.css
@@ -186,6 +186,14 @@ a.toTop {
     right: 20px !important;
 }
 
+app-back-page {
+    padding-bottom: 2px;
+}
+
+.titulo {
+    padding-bottom: 16px;
+}
+
 @media only screen and (min-width: 320px) and (max-width: 768px){
     .blocoGameList{
         padding: 0 0 24px 10px !important;
@@ -384,4 +392,4 @@ a.toTop {
     .game-grid {
         padding-right: 18px;
     }
-}
+} 
