feat: change icon to s3 link.

--- a/src/app/shared/layout/back-page/back-page/back-page.component.html
+++ b/src/app/shared/layout/back-page/back-page/back-page.component.html
@@ -1,7 +1,7 @@
 <div class="back-page">
     <div *ngIf="showBtn" class="back-page__button">
         <button (click)="back()">
-            <img src="../../../../../assets/images/iconamoon_arrow-left-2 (1).svg" alt="">
+            <img src="https://weebet.s3.amazonaws.com/cdn/img/icons/iconamoon_arrow-left-2.svg" alt="">
         </button>
     </div>
 
